--- a/public/css/typing.css
+++ b/public/css/typing.css
@@ -274,9 +274,9 @@ footer .footer_area .col-12 a:hover {
     /* padding: 5px; */
     text-align: center;
     margin: 0 0 20px 0;
-    cursor: pointer;
-    margin-left: 30px;
-    box-shadow: 0 0 3px 0 rgba(0, 0, 0, .12), 0 2px 3px 0 rgba(0, 0, 0, .22);
+    /*cursor: pointer;*/
+    margin-left: 10px;
+    /*box-shadow: 0 0 3px 0 rgba(0, 0, 0, .12), 0 2px 3px 0 rgba(0, 0, 0, .22);*/
     transition: .3s;
 }
 
