--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -5,6 +5,8 @@ body {
     "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3",
     "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
   width: 100%;
+  max-width:1440px;
+  margin:0 auto;
 }
 
 header {
