--- a/public/css/typing.css
+++ b/public/css/typing.css
@@ -202,11 +202,11 @@ footer .footer_area .col-12 a:hover {
     opacity: 0.5;
 }
 
-.main_word_btn{
+.main_word_submit {
     border: 0;
     cursor:pointer;
     margin-top:.5rem;
-    font-size: 1.6rem;
+    font-size: 1rem;
 }
 
 /* 中央タイピングエリア---------------- */
