--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -2,98 +2,93 @@
 
 body {
   font-family: "ヒラギノ丸ゴ Pro W4", "ヒラギノ丸ゴ Pro",
-    "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3",
-    "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
+  "Hiragino Maru Gothic Pro", "ヒラギノ角ゴ Pro W3",
+  "Hiragino Kaku Gothic Pro", "HG丸ｺﾞｼｯｸM-PRO", "HGMaruGothicMPRO";
   width: 100%;
-  max-width:1440px;
-  margin:0 auto;
 }
 
-header {
+
+.site_logo {
+  text-align: left;
   width: 100%;
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 16px;
   position: fixed;
   z-index: 10;
   background: white;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
-header img {
-  display: block;
-  height: 60px;
-}
-
-header a {
-  margin-right: 30px;
-  text-decoration: none;
-}
-
-.container {
-  /* width: 100%; */
-  height: 800px;
-  background-image: url(../img/ryan-wallace-azA1hLbjBBo-unsplash.jpg);
-  background-size: cover;
+.top_screen {
+  margin-top: 60px;
   position: relative;
 }
 
-h1 {
-  font-size: 128px;
-  color: white;
+.top_img {
+  width: 100%;
+  overflow: hidden;
 }
 
-h3 {
-  font-size: 24px;
+.top_img img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 600px;
 }
 
-.main_title {
+.site_title_and_link_button {
   position: absolute;
-  top: 170px;
-  left: 900px;
-}
-
-.main_title p {
-  font-size: 24px;
-  color: white;
-  margin: 10px 0px 0px 10px;
-  opacity: 0.8;
-}
-
-.play {
-  width: 400px;
-  padding: 5px;
-  border-radius: 50px;
-  margin-top: 100px;
-  margin-left: 5px;
-  font-size: 16px;
-  opacity: 0.8;
-}
-
-.play:hover {
-  opacity: 1;
-}
-
-.container-herf {
-  height: 400px;
-  background: #f2f2f2;
-  color: #4f3e34;
+  top: 12%;
+  left: 55%;
   text-align: center;
 }
 
-h2 {
-  font-size: 96px;
-  margin: 30px auto;
+.site_title_english {
+  font-size: 5rem;
+  color: white;
+}
+
+.site_title {
+  color: white;
+  font-size: 2rem;
+}
+
+.link_button {
+  width: 80%;
+  padding: 0.5rem;
+  border-radius: 50px;
+  margin-top: 1rem;
+  margin-left: 1rem;
+  font-size: 1rem;
+  opacity: 0.7;
+  border: none;
+}
+
+.link_button:hover {
+  opacity: 1;
+}
+
+.explanation {
+  text-align: center;
+  padding: 3rem;
+  background: #f2f2f2;
+}
+
+.basis_font {
+  font-size: 1.4rem;
+  margin: 1rem;
+  letter-spacing: 2px;
+  text-align: center;
+}
+
+.caption {
+  font-size: 4rem;
 }
 
 .fadein {
-  /* 画面外にいる状態 */
-  opacity: 0;
-  transform: translate(0, 50px);
-  transition: all 1000ms;
-}
+    /* 画面外にいる状態 */
+    opacity: 0;
+    transform: translate(0, 50px);
+    transition: all 1000ms;
+  }
 
 .fadein.scrollin {
   /* 画面内に入った状態 */
@@ -101,38 +96,27 @@ h2 {
   transform: translate(0, 0);
 }
 
-.explanation {
-  margin: 0 auto;
-  padding-top: 70px;
-}
-
-.explanation p {
-  font-size: 24px;
-  line-height: 36px;
-  letter-spacing: 2px;
-}
-
-.container-herf-white {
-  height: 400px;
-  color: #4f3e34;
-  text-align: center;
-}
-
 .illustration {
-  padding-top: 60px;
+  padding: 2rem;
+  position: relative;
 }
 
-.illustration img {
+.illustration_img {
   display: block;
-  width: 339px;
-  height: 226px;
-  margin: 0px auto;
+  width: 30%;
+  margin: 0 auto;
 }
 
-.illustration p {
-  font-size: 30px;
-  margin-top: 30px;
-  letter-spacing: 2px;
+.summary_illustration_img {
+  width: 100%;
+  overflow: hidden;
+}
+
+.summary_illustration_img img{
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 300px;
 }
 
 .pink {
@@ -147,82 +131,23 @@ h2 {
   color: #48ccf8;
 }
 
-.container-duble {
-  height: 820px;
+
+
+.footer_ul {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  position: relative;
-}
-
-.grouping {
-  width: 630px;
-  background-color: #f2f2f2;
-  text-align: center;
-  margin: 10px;
-}
-
-.grouping p {
-  font-size: 16px;
-}
-
-.grouping p+p {
-  margin-top: 10px;
-}
-
-.center-letter {
-  z-index: 5;
-  text-align: center;
-  font-size: 76px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.center-letter p:nth-child(2) {
-  font-size: 24px;
-  margin-top: 10px;
-}
-
-.sample_image img{
-  display: block;
-  width: 80%;
-  height: 80%;
-  margin: 100px auto;
-}
-
-footer {
-  position: relative;
-}
-
-.overview {
+  margin-top: -50px;
   color: white;
-  opacity: 0.8;
-  position: absolute;
-  top: 750px;
-  left: 600px;
+
 }
 
-footer a {
-  text-decoration: none;
+.fotter_list {
+  margin: 1rem;
   color: white;
-  opacity: 0.8;
 }
 
-footer a:hover {
-  opacity: 1;
-}
-
-footer h1 {
-  font-size: 80px;
-  margin-top: 50px;
-  margin-left: -150px;
-}
-
-footer .play {
-  margin-top: 50px;
-  margin-left: 80px;
+.js-modal-open {
+  color: white;
 }
 
 .modal {
@@ -257,77 +182,56 @@ footer .play {
   color: #4f3e34;
 }
 
-/* -------login.htmlが主な対象--------*/
+@media (max-width:768px) {
+  .site_title_and_link_button {
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+  }
 
-.form_main {
-  width: 70%;
-  height: 70%;
-  background: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* opacity: 0.8; */
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  border-radius: 10px;
+  .basis_font {
+    font-size: 1rem;
+    margin: 1rem;
+    letter-spacing: 2px;
+    text-align: center;
+  }
+
+  .caption {
+    font-size: 3rem;
+  }
+
+
+  .footer_ul {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    justify-content: center;
+    background-color: #000;
+    opacity: 0.7;
+    color: white;
+    font-size:.8rem;
+  }
 }
 
-.entry,
-.login {
-  /* opacity: 0.8; */
-  width: 40%;
-  height: 70%;
-  background: whitesmoke;
-  border-radius: 10px;
-  text-align: center;
-}
+@media (max-width:576px) {
+  .site_title_english {
+    font-size: 3rem;
+  }
 
-.entry p,
-.login p {
-  margin: 30px;
-}
+  .site_title {
+    color: white;
+    font-size: 1rem;
+  }
 
-input {
-  width: 80%;
-  height: 30px;
-  border-radius: 5px;
-}
+  .top_img img {
+    height: 300px;
+  }
 
-input.checkbox {
-  width: 15px;
-  height: 15px;
-}
-
-input.submit {
-  background-color: #f8e25d;
-}
-
-.login input.submit {
-  background-color: #48ccf8;
-}
-
-.information {
-  width: 90%;
-  height: 15%;
-  background: whitesmoke;
-  border-radius: 10px;
-  text-align: left;
-  letter-spacing: 1px;
-  font-size: 14px;
-  line-height: 20px;
-  position: relative;
-}
-
-.information ul {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 10%;
-}
-
-ol {
-  list-style-type: decimal;
+  .illustration_img {
+    width: 100%;
+  }
 }
