--- a/public/css/typing.css
+++ b/public/css/typing.css
@@ -212,6 +212,7 @@ footer .footer_area .col-12 a:hover {
 /* 中央タイピングエリア---------------- */
 /* 課題の写真 */
 .how_to_contents {
+    width:100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -226,16 +227,13 @@ footer .footer_area .col-12 a:hover {
 .theme_img {
     margin-bottom: 30px;
     width: 50%;
-    height: 100%;
-    /*overflow: hidden;*/
-    object-fit:cover;
+    height: 350px;
+    overflow: auto;
+    /*object-fit:cover;*/
 }
 
 .theme_img img {
     width: 100%;
-    display: block;
-    /* margin-bottom: 10px; */
-    object-fit: cover; 
     
 }
 
@@ -264,11 +262,6 @@ footer .footer_area .col-12 a:hover {
     text-align:center;
 }
 
-#navi_area div {
-    /*width: 300px;*/
-    /*margin-top: 10px;*/
-}
-
 #alerts {
     height: 50px;
     border-radius: 30px;
@@ -281,15 +274,6 @@ footer .footer_area .col-12 a:hover {
     /*box-shadow: 0 0 3px 0 rgba(0, 0, 0, .12), 0 2px 3px 0 rgba(0, 0, 0, .22);*/
     transition: .3s;
 }
-
-/* #alerts:hover {
-	box-shadow: 0 15px 30px -5px rgba(0,0,0,.15), 0 0 5px rgba(0,0,0,.1);
-	transform: translateY(-4px);
-} */
-/* .how_to_navi {
-    margin-top: 90px;
-    display: inline;
-} */
 
 .how_to_contents .how_to_navi {
     margin-top: 5px;
@@ -306,4 +290,23 @@ footer .footer_area .col-12 a:hover {
 
 .hidden {
     display: none;
+}
+
+@media (max-width:1024px){
+    .theme_img {
+        margin-bottom: 30px;
+        width: 50%;
+        height: 250px;
+        /*overflow: auto;*/
+        /*object-fit:cover;*/
+    }
+}
+
+@media (max-width:576px){
+    /*.theme_img {*/
+    /*margin-bottom: 30px;*/
+    /*width: 100%;*/
+    /*height: 200px;*/
+    /*overflow: auto;*/
+    /*object-fit:cover;*/
 }
